fixed mixeval form for Safari
For some reasons the table's width did not fit to the computer
screen. I've fixed it by forcing the width to be 100%.

--- a/app/webroot/css/ipeer.css
+++ b/app/webroot/css/ipeer.css
@@ -1275,6 +1275,10 @@ i {
     font-family: 'Open Sans', serif; /* for visual distinctiveness */
 }
 
+.MixevalForm table {
+    width: 100%;
+}
+
 .MixevalForm ul li {
     list-style-type: circle;
     list-style-position: inside;
